[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixelle-video"
version = "0.1.0"
description = "Pixelle-Video: A fork of AIDC-AI/Ovis with enhanced video generation capabilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Pixelle-Video Contributors" },
]
keywords = ["video generation", "diffusion", "multimodal", "AI", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "diffusers>=0.27.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.2",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "huggingface-hub>=0.21.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "av>=11.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "decord>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]
flash-attn = [
    "flash-attn>=2.3.0",
]

[project.scripts]
pixelle-video = "pixelle_video.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/Pixelle-Video"
Repository = "https://github.com/your-org/Pixelle-Video"
Issues = "https://github.com/your-org/Pixelle-Video/issues"
Documentation = "https://your-org.github.io/Pixelle-Video"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pixelle_video*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pixelle_video --cov-report=term-missing"
